# gecoshc-server

./: Dockerfile-nginx  Dockerfile-repeater  Dockerfile-ws_client  Dockerfile-ws_server  Makefile.am  README.md  autogen  build_rpm.sh  configure.ac  docker-compose.yml
SPECS/: help-channel-server.spec
conf/: Makefile.am  gecoshc_repeater  gecoshc_repeater.service  gecoshc_ws_client  gecoshc_ws_client.service  gecoshc_ws_server  gecoshc_ws_server.service  nginx.conf
src/: Makefile.am
src/repeater/: Makefile.am  gen-key.py  hcpass  ultravnc_repeater.pl
src/web/: Makefile.am  index.html  package.json  preindex.html
src/web/css/: Makefile.am
src/web/images/: Makefile.am
src/web/include/: Makefile.am
src/web/include/chrome-app/: Makefile.am
