# Copyright: 2015 Junta de Andalucia <gecos@guadalinex.org>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; version 2
# of the License
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

AC_INIT([help-channel-server], [1.0.0], [http://www.juntadeandalucia.es])

# Init automake
AM_INIT_AUTOMAKE([1.9 tar-pax])

# Checks for programs.
AC_PROG_INSTALL

AC_CONFIG_FILES([
Makefile
conf/Makefile
src/Makefile
src/repeater/Makefile
src/web/Makefile
src/web/include/Makefile
src/web/include/chrome-app/Makefile
src/web/images/Makefile
src/web/css/Makefile
])
AC_OUTPUT
