scripts_DATA = alt.png \
               connect.png \
               ctrl.png \
               drag.png \
               favicon.ico \
               fullscreen.png \
               mouse_left.png \
               mouse_none.png \
               power.png \
               screen_57x57.png \
               settings.png \
               toggleextrakeys.png \
               clipboard.png \
               ctrlaltdel.png \
               disconnect.png \
               esc.png \
               favicon.png \
               keyboard.png \
               mouse_middle.png \
               mouse_right.png \
               screen_320x460.png \
               screen_700x700.png \
               tab.png \
               logo.png

scriptsdir = $(datadir)/gecos/helpchannel/web/images

EXTRA_DIST = $(scripts_DATA)
