SUBDIRS = chrome-app

scripts_DATA = base64.js \
               black.css \
               display.js \
               input.js \
               keysymdef.js \
               logo.js \
               Orbitron700.woff \
               rfb.js \
               util.js \
               webutil.js \
               base.css \
               blue.css \
               des.js \
               inflator.js \
               keyboard.js \
               keysym.js \
               Orbitron700.ttf \
               playback.js \
               ui.js \
               websock.js \
               xtscancodes.js 

scriptsdir = $(datadir)/gecos/helpchannel/web/include

EXTRA_DIST = $(scripts_DATA)
